prevent action link text in wrapping

--- a/stadsarkiv_client/static/css/default.css
+++ b/stadsarkiv_client/static/css/default.css
@@ -237,6 +237,7 @@ h6 {
     padding: 5px 10px;
     border-radius: 5px;
     transition: background-color 0.3s;
+    white-space: nowrap;
 }
 
 .action-links>a:hover {
